<resources>
    <string name="app_name">assignment3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mvp_text">MVP</string>
    <string name="mvvm_text">MVVM</string>
    <string name="input1">Enter number 1</string>
    <string name="input2">Enter number 2</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="result">"Result: "</string>
</resources>